# model-photo-pipeline

./: .gitignore  README.md  pyproject.toml
photo_pipeline/: pipeline.py
